--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,6 @@ sudo: required
 mono: none
 dotnet: 1.0.1
 script:
-  - ./build.sh --quiet verify
+  - FilemakerSharp.Core/build.sh --quiet verify
+before_install:
+  - chmod +x FilemakerSharp.Core/build.sh
