--- a/FilemakerSharp.Core/FilemakerSharp.Core/FilemakerSharp.Core.csproj
+++ b/FilemakerSharp.Core/FilemakerSharp.Core/FilemakerSharp.Core.csproj
@@ -2,9 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp1.1</TargetFramework>
-    <Version>0.7</Version>
+    <Version>0.7.5</Version>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <Description />
+    <AssemblyVersion>0.7.5.0</AssemblyVersion>
+    <FileVersion>0.7.5.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
